--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,16 @@
     margin-top: 5px;
 }
 
+/* homepage styling */
+.homepage {
+    height: 100vh;
+    width: 100vw;
+    background: #000000;
+}
+.homepage h3 {
+    color: #ffffff;
+}
+
 /* Nav icon styling */
 nav {
     background-color: #000000;
