--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,16 @@
     color: #ffffff;
 }
 
+/* placeholder color */
+::placeholder {
+    color: #4d4d4d;
+  }
+
+/* hover underline */
+a:hover {
+    color: #6d6b6b;
+}
+
 /* homepage styling */
 .homepage {
     height: 100vh;
